--- a/ReconTest/app/src/main/res/layout/activity_main.xml
+++ b/ReconTest/app/src/main/res/layout/activity_main.xml
@@ -7,9 +7,11 @@
     tools:context="unsw.phd.jaybie.recontest.MainActivity">
 
     <TextView
+        android:id="@+id/landingView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
+        android:text="@string/landing_text"
+        android:textAlignment="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
